--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Primera pagina html</title>
 </head>
 <body>
+    <p>Correo jrpc.padilla@gmail.com</p>
+    <p>Instructor</p>
   <script src="app.js"></script>  
 </body>
 </html>
